# gitmoji-rs

./: .env  .gitignore  .gitmojis.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: audit.yaml  bloat.yaml  cd.yaml  ci.yml  lint.yaml  release-plz.yml  release.yaml  release.yml  tests.yaml
src/: cli.rs  error.rs  git.rs  history.rs  lib.rs  main.rs  model.rs  recover.rs  recovery.rs
src/cmd/: commit.rs  config.rs  hook.rs  hook.sh  list.rs  mod.rs  search.rs  update.rs
tests/: commit.rs  completion.rs  help.rs  init.rs  list.rs  search.rs  test.rs  update.rs
tests/common/: git.rs  isolation.rs  mod.rs
