[package]
name = "gitmoji-rs"
description = "A [gitmoji](https://gitmoji.dev/) interactive client for using gitmojis on commit messages."
repository = "https://github.com/ilaborie/gitmoji-rs"
keywords = ["cli", "git", "emoji", "gitmoji"]
categories = ["command-line-utilities"]
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
rust-version = "1.58.1"

[[bin]]
name = "gitmoji"
path = "src/main.rs"

[features]
hook = []

[dependencies]
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
console = "0.15"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
directories = "4.0"
fuzzy-matcher = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.23", features = [
    "process",
    "fs",
    "macros",
    "rt-multi-thread",
] }
toml_edit = { version = "0.19", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
assert2 = "0.3"
assert_cmd = "2.0"
assert_fs = "1.0"
once_cell = "1"
rexpect = "0.5"
rstest = "0.16"
serial_test = "1.0"
test-log = { version = "0.2", features = ["trace"], default-features = false }
wiremock = "0.5"

[profile.release]
# Optimize performance
lto = true
codegen-units = 1
