[package]
name = "gitmoji-rs"
description = "A [gitmoji](https://gitmoji.dev/) interactive client for using gitmojis on commit messages."
repository = "https://github.com/ilaborie/gitmoji-rs"
keywords = ["cli", "git", "emoji", "gitmoji"]
categories = ["command-line-utilities"]
version = "2.0.3"
edition = "2021"
license = "MIT"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
rust-version = "1.81.0"

[[bin]]
name = "gitmoji"
path = "src/main.rs"

[features]
hook = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.15"
derive_more = { version = "1.0", default-features = false, features = [
  "display",
  "error",
  "from",
] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "6.0"
fuzzy-matcher = "0.3"
indicatif = "0.17"
jiff = { version = "0.1.22", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43", features = [
  "process",
  "fs",
  "macros",
  "rt-multi-thread",
] }
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
assert2 = "0.3"
assert_cmd = "2.0"
assert_fs = "1.1"
once_cell = "1"
rexpect = "0.6"
rstest = "0.24"
serial_test = "3.2"
test-log = { version = "0.2", features = ["trace"], default-features = false }
wiremock = "0.6"

[profile.release]
# Optimize performance
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ilaborie//opt/homebreilaborie/homebrew-ilaborie"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci"]

# Bininstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
